--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,7 @@ html, body {
 }
 
 body {
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .container {
@@ -92,7 +91,7 @@ body {
   padding: 0 0px;
   box-sizing: border-box;
   margin: 0 auto;
-  height: 99.5rem;
+  max-height: 999999px;
 }
 
 h2 {
@@ -103,8 +102,8 @@ h2 {
 
 h3 {
   font-weight: 700;
-  font-size: 14px;
-  line-height: 19px;
+  font-size: 1.4rem;
+  line-height: 1.36;
 }
 
 p {
@@ -132,7 +131,6 @@ a {
   width: 320px;
   min-width: 320px;
   /* фиксируем и выставляем высоту панели на максимум */
-  height: 100%;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -569,18 +567,16 @@ a:focus {
 .content {
   flex-basis: 83.26%;
   background: #4D5474;
-  height: 99.5rem;
 }
 
 .content__wrap {
-  padding: 0px 7.9rem 0 4rem;
-  height: 100vh;
+  padding: 0px 12.64em 0 6.4em;
 }
 
 .content__header {
   display: flex;
   justify-content: space-between;
-  padding: 5.5rem 0;
+  padding: 8.8em 0;
 }
 
 .content__header-left {
@@ -605,7 +601,7 @@ a:focus {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 230px 230px 270px;
-  grid-gap: 3rem;
+  grid-gap: 4.8em;
   position: relative;
 }
 
@@ -669,23 +665,20 @@ a:focus {
   -ms-grid-rows: 100px 50px;
 }
 .item-3 .content__weather .content__weather-row1 {
-  display: flex;
-  align-items: flex-end;
+  grid-column: 1/1;
   display: flex;
   align-items: flex-end;
 }
 .item-3 .content__weather .content__weather-row1 .content__weather-date {
+  flex-basis: 50%;
   font-size: 1.4rem;
   line-height: 1.9rem;
-  padding: 0 0 0 2rem;
-  align-self: flex-end;
-  padding-bottom: 2rem;
+  padding: 0 0 2rem 2rem;
 }
 .item-3 .content__weather .content__weather-row1 .content__weather-temperature {
+  flex-basis: auto;
   font-size: calc(3rem + 50 * (100vw - 320px) / 1120);
   line-height: calc(6rem + 49 * (100vw - 320px) / 1120);
-  align-self: flex-start;
-  padding-left: calc(2rem + 1.9 * (100vw - 320px) / 1120);
 }
 .item-3 .content__weather .content__weather-row1 .content__weater-sup {
   font-size: calc(2.4rem + 12 * (100vw - 320px) / 880);
@@ -694,16 +687,17 @@ a:focus {
   font-style: normal;
   font-weight: 300;
   align-self: center;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
 }
 .item-3 .content__weather .content__weather-row2 {
+  grid-column: 1/2;
   display: flex;
   flex-wrap: wrap;
   color: #A1A6BE;
   padding: 0 0 0 2rem;
 }
 .item-3 .content__weather .content__weather-row2 p {
-  flex-basis: 40%;
+  flex-basis: 50%;
 }
 
 /*-------------------------------------------------------------------------------------*/
@@ -907,22 +901,28 @@ a:focus {
   position: absolute;
   max-width: 39.2%;
   left: 46.9%;
-  top: 17.42%;
+  top: 20%;
 }
 
 /*-------------------------------------------------------------------------------------*/
 .item-7 {
   grid-column: 4/7;
 }
-.item-7 .content__subtitle {
+.item-7 .item7__content {
+  display: flex;
+}
+.item-7 .item7__content .item7__content-left {
+  flex-basis: 40%;
+}
+.item-7 .item7__content .item7__content-left .content__subtitle {
   position: absolute;
   left: 5.88%;
   top: 24.44%;
 }
-.item-7 .item-7__cont-1 {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 {
   padding: 10.4rem 0 2rem 2rem;
 }
-.item-7 .item-7__cont-1 h3::before {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 h3::before {
   content: "";
   display: block;
   background: url("../img/blue.svg") no-repeat;
@@ -931,47 +931,28 @@ a:focus {
   float: left;
   margin: 0 2rem 0 0;
 }
-.item-7 .item-7__cont-1 p {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 p {
   padding-left: 3.4rem;
   color: #A1A6BE;
 }
-.item-7 .item-7__cont-1 p:nth-child(1) {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 p:nth-child(1) {
   padding-top: 0.8rem;
 }
-.item-7 .item-7__cont-1 p:nth-child(2) {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 p:nth-child(2) {
   padding-top: 0.1rem;
 }
-.item-7 .item-7__cont-1 p:nth-child(3) {
+.item-7 .item7__content .item7__content-left .item-7__cont-1 p:nth-child(3) {
   padding-top: 0.1rem;
 }
-.item-7 img {
+.item-7 .item7__content .item7__content7-right {
+  flex-basis: 55%;
+  position: relative;
+}
+.item-7 .item7__content .item7__content7-right img {
   position: absolute;
-  width: 55.56%;
-  height: 273px;
-  left: 41.67%;
-  top: 0px;
-  opacity: 0.8;
-}
-.item-7 .linev1 {
-  position: absolute;
-  top: 5rem;
-  left: 13.67%;
-  height: 73.5%;
-}
-.item-7 .linev2 {
-  top: 5rem;
-  left: 41.67%;
-  height: 73.5%;
-}
-.item-7 .linev3 {
-  top: 5rem;
-  left: 70.04%;
-  height: 73.5%;
-}
-.item-7 .lineg {
-  width: 59.36%;
-  left: 39.12%;
-  top: 33.52%;
+  padding: 2.7rem 0 0 0;
+  max-width: 100%;
+  max-height: 90%;
 }
 .item-7 a {
   padding: 0px 0 0 2rem;
@@ -981,7 +962,7 @@ a:focus {
 }
 
 /*-----------------------------------------------*/
-/* Styles for IE11 */
+/* Стили для IE11 */
 .content__main {
   display: -ms-grid;
   -ms-grid-columns: 1fr 3rem 1fr 3rem 1fr 3rem 1fr 3rem 1fr 3rem 1fr;
@@ -1030,6 +1011,7 @@ a:focus {
   -ms-grid-row: 5;
 }
 
+/*-----------------------------------------------*/
 .timer {
   padding: 2rem 0 3rem 0;
   color: #ffffff;
@@ -1051,13 +1033,113 @@ a:focus {
   text-transform: uppercase;
 }
 
+/*-----------------------------------------------*/
 @media (max-width: 1080px) {
   .content {
     flex-basis: 100%;
   }
 }
 @media (max-width: 991.98px) {
+  .content__wrap {
+    padding: 0 2.4em;
+  }
+
   .content__main {
-    display: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 4rem;
+    grid-row-gap: 2.4em;
+    grid-column-gap: 2%;
+  }
+
+  .content__item {
+    height: 24rem;
+  }
+
+  .item-1 {
+    flex-basis: 49%;
+    order: 1;
+  }
+
+  .item-2 {
+    flex-basis: 49%;
+    order: 2;
+  }
+
+  .item-3 {
+    flex-basis: 49%;
+    order: 4;
+  }
+
+  .item-4 {
+    flex-basis: 100%;
+    order: 3;
+  }
+  .item-4 .content__repot-table {
+    font-size: 1rem;
+  }
+
+  .item-5 {
+    flex-basis: 49%;
+    order: 5;
+  }
+
+  .item-6 {
+    flex-basis: 100%;
+    order: 7;
+  }
+  .item-6 img {
+    top: 6rem;
+    max-height: 70%;
+  }
+
+  .item-7 {
+    flex-basis: 100%;
+    order: 6;
+  }
+}
+@media (max-width: 767.98px) {
+  .item-1 {
+    flex-basis: 100%;
+  }
+
+  .item-2 {
+    flex-basis: 100%;
+  }
+
+  .item-3 {
+    flex-basis: 100%;
+  }
+
+  .item-4 {
+    flex-basis: 100%;
+  }
+  .item-4 .content__repot-table {
+    font-size: 0.8rem;
+    line-height: 1.36;
+  }
+  .item-4 .content__repot-table .content__report-item {
+    padding: 0.7rem 0 0.8rem 0.7rem;
+  }
+
+  .item-5 {
+    flex-basis: 100%;
+  }
+
+  .item-6 {
+    flex-basis: 100%;
+  }
+
+  .item-7 {
+    flex-basis: 100%;
+  }
+  .item-7 h3::before {
+    content: "";
+    display: block;
+    background: url("../img/blue.svg") no-repeat;
+    width: 1.4rem;
+    height: 1.4rem;
+    float: left;
+    margin: 0 2rem 0 0;
   }
 }
