--- a/scss/block/_nav.scss
+++ b/scss/block/_nav.scss
@@ -9,7 +9,7 @@
   width: 320px;
   min-width: 320px;
   /* фиксируем и выставляем высоту панели на максимум */
-  height: 100%;
+  //height: 100%;
   position: fixed;
   top: 0;
   bottom: 0;
