--- a/scss/block/_nav.scss
+++ b/scss/block/_nav.scss
@@ -5,7 +5,7 @@
  */
 
 .nav {
-  /*  ширна произвольная, не стесняйтесь экспериментировать */
+  /*  ширина произвольная */
   width: 320px;
   min-width: 320px;
   /* фиксируем и выставляем высоту панели на максимум */
